--- a/modules/flowable-ui-task/flowable-ui-task-app/src/main/resources/flowable-default.properties
+++ b/modules/flowable-ui-task/flowable-ui-task-app/src/main/resources/flowable-default.properties
@@ -28,11 +28,11 @@ flowable.common.app.role-prefix=
 # DATABASE
 #
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/flowable-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:~/flowable-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/flowable?characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://sh-cdb-2jetqkuy.sql.tencentcdb.com:63796/guns_flowable?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
 
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/flowable
@@ -47,7 +47,7 @@ spring.datasource.url=jdbc:h2:~/flowable-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT
 #spring.datasource.url=jdbc:db2://localhost:50000/flowable
 
 spring.datasource.username=flowable
-spring.datasource.password=flowable
+spring.datasource.password=@flowable
 
 # JNDI CONFIG
 
