--- a/modules/flowable-ui-modeler/flowable-ui-modeler-app/src/main/resources/flowable-default.properties
+++ b/modules/flowable-ui-modeler/flowable-ui-modeler-app/src/main/resources/flowable-default.properties
@@ -33,7 +33,7 @@ flowable.common.app.role-prefix=
 #spring.datasource.url=jdbc:h2:~/flowable-db/db;AUTO_SERVER=TRUE;AUTO_SERVER_PORT=9091;DB_CLOSE_DELAY=-1
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sh-cdb-2jetqkuy.sql.tencentcdb.com:63796/guns_flowable?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.url=jdbc:mysql://sh-cdb-2jetqkuy.sql.tencentcdb.com:63796/flowble_dev?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
 
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/flowablemodeler
